@@ -17,6 +17,7 @@ Here is a history of user visible changes to Mailman.
     - The admin Membership List now includes text for screen readers which
       identifies the function of each checkbox.  CSS is added to the page to
       visually hide the text but still allow screan readers to read it.
+      Similar text has been added to some radio buttons on the admindb pages.
 
   Bug fixes and other patches
 
